--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "redux-mock-saga",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Mock library to thoroughly test redux-sagas",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giespaepen/redux-mock-saga.git"
+  },
   "scripts": {
     "build-watch": "yarn tsc --watch",
     "build": "yarn tsc && yarn generate-flowtypes",
