--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "yarn tsc && yarn generate-flowtypes",
     "generate-flowtypes": "flowgen lib/index.d.ts -o flow-typed/index.flow.js",
     "prepublishOnly": "yarn build",
-    "test": "jest"
+    "test": "jest --config jest.config.json --no-cache"
   },
   "keywords": [
     "redux-saga",
@@ -23,7 +23,6 @@
   "author": "Gie Spaepen <giespaepen@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "jest": "^21.2.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   },
@@ -31,8 +30,8 @@
     "@types/enzyme": "^3.1.6",
     "@types/jest": "^21.1.8",
     "@types/react": "^16.0.31",
-    "@types/redux-saga": "^0.10.5",
     "flowgen": "^1.2.0",
+    "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.6.2"
