--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.6.2"
+    "typescript": "2.7"
   }
 }
