--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-mock-saga",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "Mock library to thoroughly test redux-sagas",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -32,6 +32,7 @@
     "@types/react": "^16.0.31",
     "codecov": "^3.0.0",
     "flowgen": "^1.2.0",
+    "jest": "^22.4.3",
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
