--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-mock-saga",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Mock library to thoroughly test redux-sagas",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -23,7 +23,7 @@
   "author": "Gie Spaepen <giespaepen@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "redux": "^3.7.2",
+    "redux": "4.0.0",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
